<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="16dp"
    android:layout_marginEnd="16dp"
    app:cardCornerRadius="8dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="24dp"
        android:paddingTop="16dp"
        android:paddingEnd="16dp"
        android:paddingBottom="16dp">

        <TextView
            android:id="@+id/comp_repository_name_tv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/default_string_text"
            android:textColor="?attr/colorOnSurface"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="packed"
            tools:text="octocat/Hello-World" />

        <TextView
            android:id="@+id/comp_repository_by_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:contentDescription="@string/location_icon"
            android:src="@drawable/ic_location_on_black_24dp"
            android:text="@string/by_text"
            android:textAlignment="center"
            android:textColor="?attr/secondaryColorOnSurface"
            android:textStyle="bold"
            app:layout_constraintBaseline_toBaselineOf="@id/comp_repository_owner_tv"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/comp_repository_owner_tv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="4dp"
            android:contentDescription="@string/location_icon"
            android:text="@string/default_string_text"
            android:textColor="?attr/secondaryColorOnSurface"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/comp_repository_by_tv"
            app:layout_constraintTop_toBottomOf="@id/comp_repository_name_tv"
            tools:text="octocat" />

        <ImageView
            android:id="@+id/comp_repository_stars_iv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:contentDescription="@string/star_icon"
            android:src="@drawable/ic_star_rate_yellow_24dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/comp_repository_by_tv" />

        <TextView
            android:id="@+id/comp_repository_stars_tv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="2dp"
            android:textColor="?attr/colorOnSurface"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="@id/comp_repository_stars_iv"
            app:layout_constraintStart_toEndOf="@id/comp_repository_stars_iv"
            tools:text="41" />

        <ImageView
            android:id="@+id/comp_repository_forks_iv"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginEnd="2dp"
            android:contentDescription="@string/fork_icon"
            android:src="@drawable/ic_edit_black_24dp"
            app:layout_constraintBottom_toBottomOf="@id/comp_repository_stars_iv"
            app:layout_constraintEnd_toStartOf="@id/comp_repository_forks_tv" />

        <TextView
            android:id="@+id/comp_repository_forks_tv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textColor="?attr/colorOnSurface"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="@id/comp_repository_forks_iv"
            app:layout_constraintEnd_toEndOf="parent"
            tools:text="41" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>