<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorPrimary"
    tools:context=".ui.UserDetailActivity">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/user_detail_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="156dp" />

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/user_detail_profile_siv"
        android:layout_width="224dp"
        android:layout_height="224dp"
        android:elevation="8dp"
        android:padding="@dimen/image_stroke_width"
        app:layout_constraintBottom_toTopOf="@id/user_detail_guideline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/user_detail_guideline"
        app:shapeAppearanceOverlay="@style/ShapeAppearance.ShapeableImageView.Circular"
        app:strokeColor="?attr/colorOnPrimary"
        app:strokeWidth="@dimen/image_stroke_width"
        tools:src="@drawable/user1" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@drawable/rounded_top_corner_shape"
        android:paddingStart="16dp"
        android:paddingTop="120dp"
        android:paddingEnd="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/user_detail_guideline">

        <TextView
            android:id="@+id/user_detail_name_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:textAlignment="center"
            android:textColor="?attr/colorOnSurface"
            android:textSize="28sp"
            android:textStyle="bold"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="Jake Wharton" />

        <androidx.cardview.widget.CardView
            android:id="@+id/user_detail_repository_cv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:cardBackgroundColor="@color/lightPrimaryColor"
            app:cardCornerRadius="10dp"
            app:layout_constraintEnd_toStartOf="@+id/user_detail_follower_cv"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/user_detail_name_tv">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="8dp">

                <TextView
                    android:id="@+id/user_detail_repository_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="?attr/colorOnSurface"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    tools:text="28" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/repositories"
                    android:textColor="?attr/subtitleTextColor"
                    android:textSize="16sp" />
            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/user_detail_follower_cv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            app:cardBackgroundColor="@color/lightPrimaryColor"
            app:cardCornerRadius="10dp"
            app:layout_constraintEnd_toStartOf="@+id/user_detail_following_cv"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/user_detail_repository_cv"
            app:layout_constraintTop_toTopOf="@id/user_detail_repository_cv">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="8dp">

                <TextView
                    android:id="@+id/user_detail_follower_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="?attr/colorOnSurface"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    tools:text="28" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/followers"
                    android:textColor="?attr/subtitleTextColor"
                    android:textSize="16sp" />
            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/user_detail_following_cv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            app:cardBackgroundColor="@color/lightPrimaryColor"
            app:cardCornerRadius="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/user_detail_follower_cv"
            app:layout_constraintTop_toTopOf="@id/user_detail_repository_cv">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="8dp">

                <TextView
                    android:id="@+id/user_detail_following_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="?attr/colorOnSurface"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    tools:text="28" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/following"
                    android:textColor="?attr/subtitleTextColor"
                    android:textSize="16sp" />
            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/user_detail_about_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/about"
            android:textColor="?attr/colorOnSurface"
            android:textSize="22sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/user_detail_repository_cv" />

        <ImageView
            android:id="@+id/user_detail_company_iv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:src="@drawable/ic_company_black_24dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/user_detail_about_tv" />

        <TextView
            android:id="@+id/user_detail_company_tv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:textColor="?colorOnSurface"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/user_detail_company_iv"
            app:layout_constraintTop_toTopOf="@id/user_detail_company_iv"
            tools:text="Google, Inc." />

        <ImageView
            android:id="@+id/user_detail_location_iv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:src="@drawable/ic_location_on_black_24dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/user_detail_company_tv" />

        <TextView
            android:id="@+id/user_detail_location_tv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:textColor="?colorOnSurface"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/user_detail_location_iv"
            app:layout_constraintTop_toTopOf="@id/user_detail_location_iv"
            tools:text="Pittsburgh, PA, USA" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>